[gd_scene load_steps=11 format=3 uid="uid://dsw87lytwmptq"]

[ext_resource type="Script" uid="uid://ctnncou25wih5" path="res://Scripts/Pause Menu/pause_menu.gd" id="1_de3ha"]
[ext_resource type="Shader" uid="uid://bs8hux3hal6ki" path="res://Scene/UI/pause_menu.gdshader" id="1_f8k2o"]
[ext_resource type="Texture2D" uid="uid://c8pi3b8x5i1n7" path="res://Assets/UI/Play col_Square Button.png" id="1_h3uhm"]
[ext_resource type="Texture2D" uid="uid://ci2rt126e4njw" path="res://Assets/UI/Return col_Square Button.png" id="3_de3ha"]
[ext_resource type="Texture2D" uid="uid://c1wckswp72gy3" path="res://Assets/UI/Home col_Square Button.png" id="4_cofif"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_de3ha"]
shader = ExtResource("1_f8k2o")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxLine" id="StyleBoxLine_3m8t7"]
thickness = 0

[sub_resource type="Animation" id="Animation_3m8t7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cofif"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kv6df"]
_data = {
&"RESET": SubResource("Animation_3m8t7"),
&"blur": SubResource("Animation_cofif")
}

[node name="pause_menu" type="CanvasLayer" groups=["player"]]
script = ExtResource("1_de3ha")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_de3ha")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_right = 104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxLine_3m8t7")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Restart" type="Button" parent="PanelContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("3_de3ha")

[node name="Resume" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
icon = ExtResource("1_h3uhm")

[node name="Home" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
action_mode = 0
icon = ExtResource("4_cofif")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kv6df")
}

[connection signal="pressed" from="PanelContainer/HBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Home" to="." method="_on_home_pressed"]
